@@ -1,6 +1,7 @@
 version 2.5.3
 --------------
-Thanks to Neil Darlow for feedback
+Thanks to Neil Darlow for feedback. Thanks to xloem at sourceforge for bug
+report, troubleshooting and fix, great job!
 
 version 2.5.2
 --------------
